--- a/partials/footer.html
+++ b/partials/footer.html
@@ -5,6 +5,7 @@
     <a href="audits.html">Audits</a>
     <a href="packages.html">Packages</a>
     <a href="request-discussion.html">Request Discussion</a>
+    <a href="faq.html">FAQs</a>
     <a href="legal-guidelines.html">Legal & Guidelines</a>
     <a href="privacy-policy.html">Privacy Policy</a>
     <a href="terms.html">Terms & Conditions</a>
