--- a/partials/header.html
+++ b/partials/header.html
@@ -3,6 +3,7 @@
   <div class="nav-links">
     <a href="index.html">Home</a>
     <a href="audits.html">Audits</a>
+    <a href="methodology.html">Methodology</a>
     <a href="packages.html">Packages</a>
     <a href="request-discussion.html">Request Discussion</a>
   </div>
