--- a/partials/header.html
+++ b/partials/header.html
@@ -1,5 +1,5 @@
 <nav>
-  <div class="logo">VEXOR</div>
+  <a href="index.html"  class="logo" >VEXOR</a>
   <div class="nav-links">
     <a href="index.html">Home</a>
     <a href="audits.html">Audits</a>
