--- a/partials/header.html
+++ b/partials/header.html
@@ -5,6 +5,6 @@
     <a href="audits.html">Audits</a>
     <a href="methodology.html">Methodology</a>
     <a href="packages.html">Packages</a>
-    <a href="request-discussion.html">Request Discussion</a>
+    <a href="request-discussion.html">Initiate Discussion</a>
   </div>
 </nav>
